prepare dependencies for blitz fix runtime dependencies fix logger error fix serving exertlet-ui remove webster special support for maven repo
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@118 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/configs/boot-iGrid-min-http.config
+++ b/iGrid/configs/boot-iGrid-min-http.config
@@ -5,6 +5,8 @@ import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 
+import sorcer.util.ArtifactCoordinates;
+
 // Phoenix activation service
 // Reggie service registrar and lookup service
 // Outrigger JavaSpace
@@ -38,14 +40,15 @@ com.sun.jini.start {
 	//startPort = Booter.getWebsterStartPort();
 	//endPort = Booter.getWebsterEndPort();
 	
-	repo = "${user.home}/.m2/repository";
+	repo = "${user.home}/.m2/repository/";
     
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up root directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
         // (String policy, int port, String[] roots, boolean isMaven)
         SorcerDescriptorUtil.getWebster(policy, port,
-                                         new String[] { sorcerLibPath,
+                                         new String[] { repo,
+                                                        sorcerLibPath,
                                          			    sorcerLibDlPath,
                                          			    //engLibDlPath,
                                          			    jiniLibDLPath,
@@ -55,8 +58,9 @@ com.sun.jini.start {
                                                         deployPath,
                                                         httpData,
                                                         jfreechartLib,
-                                                        //productLibDlPath 
-                                                        }, true),
+                                                        //productLibDlPath
+                                                        }
+        ),
                                                         
 
 /*
@@ -69,14 +73,14 @@ com.sun.jini.start {
 */
 
 		new SorcerServiceDescriptor(
-            "/org/apache/river/reggie-dl/2.2.1/reggie-dl-2.2.1.jar",
+            "org/apache/river/reggie-dl/2.2.1/reggie-dl-2.2.1.jar",
             policy,
             repo + "/org/apache/river/reggie/2.2.1/reggie-2.2.1.jar",
             "com.sun.jini.reggie.TransientRegistrarImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}reggie.config" }),
 
 		new SorcerServiceDescriptor(
-            "/org/apache/river/mahalo-dl/2.2.1/mahalo-dl-2.2.1.jar",
+            "org/apache/river/mahalo-dl/2.2.1/mahalo-dl-2.2.1.jar",
             policy,
             repo + "/org/apache/river/mahalo/2.2.1/mahalo-2.2.1.jar",
             //jiniLibPath + "/mahalo.jar",
@@ -114,18 +118,19 @@ com.sun.jini.start {
             new String[] { home + "${/}bin${/}jini${/}configs${/}outrigger.config" }),
 */
 
- /*  		// Blitz
+   		// Blitz
+/*
         new SorcerServiceDescriptor(
- 			"blitz-dl.jar blitzui.jar",
+ 			new ArtifactCoordinates("org.dancres.blitz","blitz-dl","2.1.7")+" "+ new ArtifactCoordinates("org.dancres.blitz","blitzui","2.1.7"),
             policy, 
             ConfigUtil.concat(new Object[] {
-            	blitzLib, "${/}blitz.jar",
-            	ps, blitzLib, "${/}blitzui.jar",
-            	ps, home, "${/}lib${/}common${/}je-4.1.21.jar",
-            	ps, jiniLibPath, "${/}serviceui.jar",
-            	ps, home, "${/}lib${/}river${/}lib-dl${/}outrigger-dl.jar",
-            	ps, jiniLibPath, "${/}jsk-platform.jar" }
-            	),
+            	repo, new ArtifactCoordinates("org.dancres.blitz","blitz","2.1.7"), ps,
+            	repo, new ArtifactCoordinates("org.dancres.blitz","blitzui","2.1.7"), ps,
+            	repo, new ArtifactCoordinates("com.sleepycat","je","4.1.21"), ps,
+            	repo, new ArtifactCoordinates("net.jini.lookup","serviceui","2.2.1"), ps,
+            	repo, new ArtifactCoordinates("org.apache.river","outrigger-dl","2.2.1"), ps,
+            	repo, new ArtifactCoordinates("net.jini","jsk-platform","2.2.1")
+            }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
           	new String[] { home + "${/}bin${/}blitz${/}configs${/}blitz.config" }),
 */
@@ -154,10 +159,11 @@ com.sun.jini.start {
        			home + "${/}bin${/}sorcer${/}jobber${/}configs${/}spacer-prv.config"),
    */    
        		/* SORCER Catalog Service */
+/*
       		SorcerDescriptorUtil.getCataloger(
        			policy, 
        			home + "${/}bin${/}sorcer${/}cataloger${/}configs${/}cataloger-prv.config"),
-    			
+*/
        		/* SORCER Logger Service */
 /*       		SorcerDescriptorUtil.getLogger(
        			policy, 
