--- a/iGrid/modules/tools/boot/pom.xml
+++ b/iGrid/modules/tools/boot/pom.xml
@@ -49,6 +49,38 @@
             <artifactId>rio-platform</artifactId>
             <version>5.0-SNAPSHOT</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.dancres.blitz</groupId>
+            <artifactId>blitz</artifactId>
+            <version>${v.blitz}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.dancres.blitz</groupId>
+            <artifactId>blitzui</artifactId>
+            <version>${v.blitz}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sleepycat</groupId>
+            <artifactId>je</artifactId>
+            <version>${v.sleepycat}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.jini.lookup</groupId>
+            <artifactId>serviceui</artifactId>
+            <version>${v.jini}</version>
+            <!--<scope>provided</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.river</groupId>
+            <artifactId>outrigger-dl</artifactId>
+            <version>${v.jini}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
