--- a/iGrid/pom.xml
+++ b/iGrid/pom.xml
@@ -13,6 +13,8 @@
 
 	<properties>
 		<v.jini>2.2.1</v.jini>
+        <v.blitz>2.1.7</v.blitz>
+        <v.sleepycat>4.1.21</v.sleepycat>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
