rename cataloger-api to cataloger-service fix some paths
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@121 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/bin/webster/configs/start-webster.config
+++ b/iGrid/bin/webster/configs/start-webster.config
@@ -49,7 +49,7 @@ com.sun.jini.start {
                                          startPort,
                                          endPort,
                                          true,
-                                         false,
-                                         true)
+                                         false
+                                         )
     };
 }  
