--- a/iGrid/configs/boot-iGrid-min-http.config
+++ b/iGrid/configs/boot-iGrid-min-http.config
@@ -45,7 +45,7 @@ com.sun.jini.start {
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up 10 directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug, boolean isDaemon)
-    /*    SorcerDescriptorUtil.getWebster(policy,
+    SorcerDescriptorUtil.getWebster(policy,
                                          port,
                                          new String[] { //rioLibPath,
                                                         jiniLibPath,
@@ -58,15 +58,6 @@ com.sun.jini.start {
                                          endPort,
                                          true,
                                          false),
-*/
-/*        SorcerDescriptorUtil.getWebster(policy, port,
-                                         new String[] { repo,
-                                                        blitzLib,
-                                                        deployPath,
-                                                        httpData,
-                                                        }
-        ),
-  */                                                    
 
 /*
         new SorcerServiceDescriptor(
@@ -167,7 +158,7 @@ com.sun.jini.start {
 
       		SorcerDescriptorUtil.getCataloger(
        			policy, 
-       			home + "${/}bin${/}sorcer${/}cataloger${/}configs${/}cataloger-prv.config"),
+       			home + "${/}modules/providers/cataloger/cataloger-service/src/main/resources${/}configs${/}cataloger-prv.config"),
 
        		/* SORCER Logger Service */
 /*       		SorcerDescriptorUtil.getLogger(
