--- a/iGrid/modules/providers/cataloger/pom.xml
+++ b/iGrid/modules/providers/cataloger/pom.xml
@@ -13,7 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>cataloger-ui</module>
-        <module>cataloger-api</module>
+        <module>cataloger-service</module>
     </modules>
 
 
