--- a/iGrid/modules/providers/cataloger/cataloger-service/pom.xml
+++ b/iGrid/modules/providers/cataloger/cataloger-service/pom.xml
@@ -8,8 +8,10 @@
         <version>11.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <name>SORCER cataloger :: service</name>
 
-    <artifactId>cataloger-api</artifactId>
+
+    <artifactId>cataloger-service</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
