Fixed logger and spacer, cataloger-ui merged with exertlet-ui
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@122 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/configs/boot-iGrid-min-http.config
+++ b/iGrid/configs/boot-iGrid-min-http.config
@@ -19,12 +19,12 @@ com.sun.jini.start {
 	home = "${iGrid.home}";
 	policy = "${java.security.policy}";
 	ps = System.getProperty("path.separator");
-	
+    river_version="2.2.1";
+    blitz_version="2.1.7";
+
 	// webster root directories
 	sorcerLibPath 	 = home + "${/}lib${/}sorcer${/}lib";
  	sorcerLibDlPath  = home + "${/}lib${/}sorcer${/}lib-dl";
- 	//engLibDlPath     = home + "${/}lib${/}eng${/}lib-dl";
- 	//productLibDlPath= home + "${/}..${/}Products${/}lib${/}products${/}lib-dl";
     jiniLibPath 	 = home + "${/}lib${/}river${/}lib";
     jiniLibDLPath    = home + "${/}lib${/}river${/}lib-dl";
     //rioLibPath 		 = home + "${/}lib${/}rio${/}lib";
@@ -45,7 +45,7 @@ com.sun.jini.start {
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up 10 directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug, boolean isDaemon)
-    SorcerDescriptorUtil.getWebster(policy,
+        SorcerDescriptorUtil.getWebster(policy,
                                          port,
                                          new String[] { //rioLibPath,
                                                         jiniLibPath,
@@ -69,16 +69,16 @@ com.sun.jini.start {
 */
 
 		new SorcerServiceDescriptor(
-            "org/apache/river/reggie-dl/2.2.1/reggie-dl-2.2.1.jar",
+	      	"" + new ArtifactCoordinates("org.apache.river","reggie-dl",river_version),
             policy,
-            repo + "/org/apache/river/reggie/2.2.1/reggie-2.2.1.jar",
+            repo + new ArtifactCoordinates("org.apache.river","reggie",river_version),
             "com.sun.jini.reggie.TransientRegistrarImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}reggie.config" }),
-
+            
 		new SorcerServiceDescriptor(
-            "org/apache/river/mahalo-dl/2.2.1/mahalo-dl-2.2.1.jar",
+	    	"" + new ArtifactCoordinates("org.apache.river","mahalo-dl",river_version),
             policy,
-            repo + "/org/apache/river/mahalo/2.2.1/mahalo-2.2.1.jar",
+            repo + new ArtifactCoordinates("org.apache.river","mahalo",river_version),
             //jiniLibPath + "/mahalo.jar",
             "com.sun.jini.mahalo.TransientMahaloImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}mahalo.config" }),
@@ -117,15 +117,15 @@ com.sun.jini.start {
    		// Blitz
 
         new SorcerServiceDescriptor(
- 			new ArtifactCoordinates("org.dancres.blitz","blitz-dl","2.1.7")+" "+ new ArtifactCoordinates("org.dancres.blitz","blitzui","2.1.7"),
+ 			new ArtifactCoordinates("org.dancres.blitz","blitz-dl",blitz_version)+" "+ new ArtifactCoordinates("org.dancres.blitz","blitzui",blitz_version),
             policy, 
             ConfigUtil.concat(new Object[] {
-            	repo, new ArtifactCoordinates("org.dancres.blitz","blitz","2.1.7"), ps,
-            	repo, new ArtifactCoordinates("org.dancres.blitz","blitzui","2.1.7"), ps,
+            	repo, new ArtifactCoordinates("org.dancres.blitz","blitz",blitz_version), ps,
+            	repo, new ArtifactCoordinates("org.dancres.blitz","blitzui",blitz_version), ps,
             	repo, new ArtifactCoordinates("com.sleepycat","je","4.1.21"), ps,
-            	repo, new ArtifactCoordinates("net.jini.lookup","serviceui","2.2.1"), ps,
-            	repo, new ArtifactCoordinates("org.apache.river","outrigger-dl","2.2.1"), ps,
-            	repo, new ArtifactCoordinates("net.jini","jsk-platform","2.2.1")
+            	repo, new ArtifactCoordinates("net.jini.lookup","serviceui",river_version), ps,
+            	repo, new ArtifactCoordinates("org.apache.river","outrigger-dl",river_version), ps,
+            	repo, new ArtifactCoordinates("net.jini","jsk-platform",river_version)
             }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
           	new String[] { home + "${/}bin${/}blitz${/}configs${/}blitz.config" }),
@@ -150,21 +150,21 @@ com.sun.jini.start {
        			home + "${/}bin${/}sorcer${/}jobber${/}configs${/}jobber-prv.config"),
     
      		/* SORCER Space Service */
-/*       		SorcerDescriptorUtil.getSpacer(
+       		SorcerDescriptorUtil.getSpacer(
        			policy, 
        			home + "${/}bin${/}sorcer${/}jobber${/}configs${/}spacer-prv.config"),
-   */    
+    
        		/* SORCER Catalog Service */
 
       		SorcerDescriptorUtil.getCataloger(
        			policy, 
        			home + "${/}modules/providers/cataloger/cataloger-service/src/main/resources${/}configs${/}cataloger-prv.config"),
-
+       			
        		/* SORCER Logger Service */
-/*       		SorcerDescriptorUtil.getLogger(
+       		SorcerDescriptorUtil.getLogger(
        			policy, 
        			home + "${/}bin${/}sorcer${/}logger${/}configs${/}logger-prv.config"),
-*/       			
+       			
        		/* SORCER ExertMonitor Service */
 /*       		SorcerDescriptorUtil.getExertMonitor(
        			policy, 
