--- a/iGrid/modules/exertlet-ui/pom.xml
+++ b/iGrid/modules/exertlet-ui/pom.xml
@@ -19,10 +19,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.0.6</version>
+			<scope>provided</scope>
+		</dependency>        
     </dependencies>
 
 </project>
