--- a/iGrid/modules/providers/spacer/pom.xml
+++ b/iGrid/modules/providers/spacer/pom.xml
@@ -9,9 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jobber</artifactId>
+    <artifactId>spacer</artifactId>
     <packaging>pom</packaging>
     <modules>
-	<module>jobber-service</module>
+	<module>spacer-service</module>
     </modules>
 </project>
