--- a/iGrid/configs/boot-iGrid-min-http.config
+++ b/iGrid/configs/boot-iGrid-min-http.config
@@ -146,30 +146,32 @@ com.sun.jini.start {
  */ 
     		/* SORCER Job Service */
        		SorcerDescriptorUtil.getJobber(
-       			policy, 
-       			home + "${/}bin${/}sorcer${/}jobber${/}configs${/}jobber-prv.config"),
+       			policy,
+       			home + "${/}modules${/}providers${/}jobber${/}jobber-service${/}src${/}main${/}resources${/}configs${/}jobber-prv.config"),
+       			//home + "${/}bin${/}sorcer${/}jobber${/}configs${/}jobber-prv.config"),
     
      		/* SORCER Space Service */
        		SorcerDescriptorUtil.getSpacer(
-       			policy, 
-       			home + "${/}bin${/}sorcer${/}jobber${/}configs${/}spacer-prv.config"),
+       			policy,
+       			home + "${/}modules${/}providers${/}spacer${/}spacer-service${/}src${/}main${/}resources${/}configs${/}spacer-prv.config"), 
+       			//home + "${/}bin${/}sorcer${/}jobber${/}configs${/}spacer-prv.config"),
     
        		/* SORCER Catalog Service */
 
       		SorcerDescriptorUtil.getCataloger(
        			policy, 
-       			home + "${/}modules/providers/cataloger/cataloger-service/src/main/resources${/}configs${/}cataloger-prv.config"),
+       			home + "${/}modules${/}providers${/}cataloger${/}cataloger-service${/}src${/}main${/}resources${/}configs${/}cataloger-prv.config"),
        			
        		/* SORCER Logger Service */
        		SorcerDescriptorUtil.getLogger(
        			policy, 
-       			home + "${/}bin${/}sorcer${/}logger${/}configs${/}logger-prv.config"),
+       			home + "${/}modules${/}providers${/}logger${/}logger-service${/}src${/}main${/}resources${/}configs${/}logger-prv.config"),
        			
        		/* SORCER ExertMonitor Service */
-/*       		SorcerDescriptorUtil.getExertMonitor(
+       		SorcerDescriptorUtil.getExertMonitor(
        			policy, 
-       			home + "${/}bin${/}sorcer${/}exertmonitor${/}configs${/}exertmonitor-prv.config"),
-*/       			
+       			home + "${/}modules${/}providers${/}exertmonitor${/}exertmonitor-service${/}src${/}main${/}resources${/}configs${/}exertmonitor-prv.config"),
+       			
        		/* SORCER Database Store Service */
 /*       		SorcerDescriptorUtil.getDatabaseStorer(
        			policy, 
