ex1 mavenization - WIP create client-common, move classes from sorcer
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@129 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/examples/ex6/pom.xml
+++ b/iGrid/modules/examples/ex6/pom.xml
@@ -22,6 +22,11 @@
 			<artifactId>sorcer</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>client-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
