--- a/iGrid/modules/examples/ex1/pom.xml
+++ b/iGrid/modules/examples/ex1/pom.xml
@@ -7,23 +7,18 @@
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<version>11.1</version>
-		<artifactId>sorcer-root</artifactId>
+		<artifactId>examples</artifactId>
 	</parent>
 
-	<artifactId>modules</artifactId>
+	<artifactId>ex1</artifactId>
 	<packaging>pom</packaging>
-	<name>SORCER modules</name>
+	<name>SORCER example 1</name>
 	<description>SORCER</description>
 	<url>http://sorcersoft.org/</url>
 
 	<modules>
-		<module>sorcer</module>
-		<module>tools</module>
-		<module>examples</module>
-		<module>util</module>
-        <module>providers</module>
-        <module>sorcer-api</module>
-        <module>exertlet-ui</module>
-        <module>client-common</module>
-    </modules>
+		<module>ex1-api</module>
+		<module>ex1-service</module>
+		<module>ex1-client</module>
+	</modules>
 </project>
