Fixed DatabaseStorer and other infrastructure services
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@130 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/configs/boot-iGrid-min-http.config
+++ b/iGrid/configs/boot-iGrid-min-http.config
@@ -79,37 +79,36 @@ com.sun.jini.start {
 	    	"" + new ArtifactCoordinates("org.apache.river","mahalo-dl",river_version),
             policy,
             repo + new ArtifactCoordinates("org.apache.river","mahalo",river_version),
-            //jiniLibPath + "/mahalo.jar",
             "com.sun.jini.mahalo.TransientMahaloImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}mahalo.config" }),
 
 /*
        new SorcerServiceDescriptor(
-           "fiddler-dl.jar jsk-dl.jar",
-           policy,
-           jiniLibPath + "/fiddler.jar",
+	      	"" + new ArtifactCoordinates("org.apache.river","fiddler-dl",river_version),
+            policy,
+            repo + new ArtifactCoordinates("org.apache.river","fiddler",river_version),
            "com.sun.jini.fiddler.TransientFiddlerImpl",
-           new String[] { home + "${/}bin${/}jini${/}configs${/}fiddler.config" }),
+            new String[] { home + "${/}bin${/}jini${/}configs${/}fiddler.config" }),
 
         new SorcerServiceDescriptor(
-            "mercury-dl.jar jsk-dl.jar",
+	      	"" + new ArtifactCoordinates("org.apache.river","mercury-dl",river_version),
             policy,
-            jiniLibPath + "/mercury.jar",
+            repo + new ArtifactCoordinates("org.apache.river","mercury",river_version),
             "com.sun.jini.mercury.TransientMercuryImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}mercury.config" }),
 
 
         new SorcerServiceDescriptor(
-            "norm-dl.jar jsk-dl.jar",
+	      	"" + new ArtifactCoordinates("org.apache.river","norm-dl",river_version),
             policy,
-            jiniLibPath + "/norm.jar",
+            repo + new ArtifactCoordinates("org.apache.river","norm",river_version),
             "com.sun.jini.norm.TransientNormServerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}norm.config" }),
             
         new SorcerServiceDescriptor(
-            "outrigger-dl.jar jsk-dl.jar",
+	      	"" + new ArtifactCoordinates("org.apache.river","outrigger-dl",river_version),
             policy,
-            jiniLibPath + "/outrigger.jar",
+            repo + new ArtifactCoordinates("org.apache.river","outrigger",river_version),
             "com.sun.jini.outrigger.TransientOutriggerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}outrigger.config" }),
 */
@@ -173,9 +172,9 @@ com.sun.jini.start {
        			home + "${/}modules${/}providers${/}exertmonitor${/}exertmonitor-service${/}src${/}main${/}resources${/}configs${/}exertmonitor-prv.config"),
        			
        		/* SORCER Database Store Service */
-/*       		SorcerDescriptorUtil.getDatabaseStorer(
+       		SorcerDescriptorUtil.getDatabaseStorer(
        			policy, 
-       			home + "${/}bin${/}sorcer${/}dbp${/}configs${/}dbp-prv.config")
-*/ 
+       			home + "${/}modules${/}providers${/}dbp${/}dbp-service${/}src${/}main${/}resources${/}configs${/}dbp-prv.config")
+ 
     };
 }
