--- a/iGrid/modules/examples/ex1/ex1-service/pom.xml
+++ b/iGrid/modules/examples/ex1/ex1-service/pom.xml
@@ -34,7 +34,7 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>boot</artifactId>
             <version>${project.version}</version>
-            <scope>runtime</scope>
+          <!--   <scope>runtime</scope> -->
         </dependency>
     </dependencies>
 
