--- a/iGrid/modules/examples/ex6/pom.xml
+++ b/iGrid/modules/examples/ex6/pom.xml
@@ -27,6 +27,11 @@
 			<artifactId>client-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>dbp-service</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
